--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,8 @@
 BACKBONE_NAME: efficientnetb2
 BATCH_SIZE: 2
 CENTERNET_PRETRAIN_PATH: null
-CONFIDENCE_THRESHOLD: 15
-CP_SAVING_PATH: /Users/xiejialun/Desktop/ML/projects/Kaggle_Cars/Dataset/checkpoints/efficientnetb2_CenterNet.hdf5
+CONFIDENCE_THRESHOLD: 0.1
+CP_SAVING_PATH: ./Dataset/checkpoints/efficientnetb2_CenterNet.hdf5
 DEPTH_LOSS_WEIGHT: 1.5
 DUPLICATE_CAR_DISTANCE_THRESHOLD: 15
 EPOCH: 16
@@ -13,26 +13,26 @@ INPUT_IMAGE_SIZE: !!python/tuple
 - 512
 - 1536
 LEARNING_RATE: 0.0001
-MAIN_DIR: /Users/xiejialun/Desktop/ML/projects/Kaggle_Cars/Dataset/pku-autonomous-driving/
+MAIN_DIR: ./Dataset/pku-autonomous-driving/
 MAX_OBJECTS: 50
 ORIGINAL_IMAGE_SIZE: !!python/tuple
 - 2710
 - 3384
 ORIGINAL_Y_CROPPED: 1526
-OUTPUT_FILE_PATH: /Users/xiejialun/Desktop/ML/projects/Kaggle_Cars/OutputFile/
+OUTPUT_FILE_PATH: ./OutputFile/
 OUTPUT_SIZE: !!python/tuple
 - 128
 - 384
 ROTATE_FOR_TRAIN: true
 ROTATE_PROB: 0.5
 ROTATION_LOSS_WEIGHT: 1.25
-SAMPLE_SUBMISSION_CSV_DIR: /Users/xiejialun/Desktop/ML/projects/Kaggle_Cars/Dataset/pku-autonomous-driving/sample_submission.csv
+SAMPLE_SUBMISSION_CSV_DIR: ./Dataset/pku-autonomous-driving/sample_submission.csv
 SIGMA_BASE: 1
-TEST_IMAGE_DIR: /Users/xiejialun/Desktop/ML/projects/Kaggle_Cars/Dataset/pku-autonomous-driving/test_images
-TEST_MASK_DIR: /Users/xiejialun/Desktop/ML/projects/Kaggle_Cars/Dataset/pku-autonomous-driving/test_masks
-TRAIN_CSV_DIR: /Users/xiejialun/Desktop/ML/projects/Kaggle_Cars/Dataset/pku-autonomous-driving/train.csv
-TRAIN_IMAGE_DIR: /Users/xiejialun/Desktop/ML/projects/Kaggle_Cars/Dataset/pku-autonomous-driving/train_images
-TRAIN_MASK_DIR: /Users/xiejialun/Desktop/ML/projects/Kaggle_Cars/Dataset/pku-autonomous-driving/train_masks
+TEST_IMAGE_DIR: ./Dataset/pku-autonomous-driving/test_images
+TEST_MASK_DIR: ./Dataset/pku-autonomous-driving/test_masks
+TRAIN_CSV_DIR: ./Dataset/pku-autonomous-driving/train.csv
+TRAIN_IMAGE_DIR: ./Dataset/pku-autonomous-driving/train_images
+TRAIN_MASK_DIR: ./Dataset/pku-autonomous-driving/train_masks
 X_ROT_ANGLE: 4
 Y_ROT_ANGLE: 4
 Z_ROT_ANGLE: 4
